--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"
-            android:theme="@style/MainActivity"/>
+            android:theme="@style/AppTheme"/>
 
         <meta-data
             android:name="preloaded_fonts"
